--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,5 +38,9 @@
     <string name="resend_otp">Kirim Ulang</string>
     <string name="errorOTP">Kode OTP tidak valid</string>
     <string name="validasiRegister">Semua Kolom harus diisi</string>
+    <string name="otp_resent">OTP berhasil dikirim ulang</string>
+    <string name="kirim">Kirim</string>
+    <string name="lupa_password">Lupa Password</string>
+    <string name="kembali_ke_login">Kembali</string>
 
 </resources>
