--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,5 +42,6 @@
     <string name="kirim">Kirim</string>
     <string name="lupa_password">Lupa Password</string>
     <string name="kembali_ke_login">Kembali</string>
+    <string name="fab_content_desc">Tambah Product</string>
 
 </resources>
