List Category & Check Email

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -103,4 +103,5 @@
     <string name="links2">Links</string>
     <string name="pilihan_tema">Pilihan Tema</string>
     <string name="update_store">Update Store</string>
+    <string name="list_kategori">List Kategori</string>
 </resources>
