Fixing Register Bug

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -104,4 +104,5 @@
     <string name="pilihan_tema">Pilihan Tema</string>
     <string name="update_store">Update Store</string>
     <string name="list_kategori">List Kategori</string>
+    <string name="tambah_produk">Tambah Produk</string>
 </resources>
